syntax = "proto3";

package api;

message SubmitRequest {
    string oj = 1;
    int32 problem_id = 2;
    string code = 3;
    int32 language_code = 4;
    bool is_shared = 5;
}

message SubmitResponse {
    enum Result {
        SUCCESS = 0;
        FAILURE = 1;
    }
    Result result = 1;
    string hint = 2;
    int64 submission_id = 3;
}
