syntax = "proto3";

package api;

import "api/common.proto";

message SubmitRequest {
    int64 contest_id = 1;
    string problem_sid = 2;
    string code = 3;
    int64 language_id= 4;
    bool is_shared = 5;
}

message SubmitResponse {
    int64 run_id = 1;
    Error error = 2;
}
